--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.6.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.0",
+    "bootstrap-loader": "^3.0.4",
     "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.9.0",
@@ -14,7 +16,9 @@
     "react-scripts": "3.0.1",
     "reactjs-popup": "^1.4.2",
     "reactstrap": "^8.0.1",
-    "styled-components": "^4.3.2"
+    "resolve-url-loader": "^3.1.1",
+    "styled-components": "^4.3.2",
+    "tether": "^1.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
